@@ -65,7 +65,7 @@ class DkControlWidget;
 class DkPeer;
 class DkRotatingRect;
 class DkPluginInterface;
-class DkPlugin;
+class DkPluginContainer;
 
 class DllGuiExport DkViewPort : public DkBaseViewPort {
 	Q_OBJECT
@@ -161,7 +161,7 @@ public slots:
 	void cropImage(const DkRotatingRect& rect, const QColor& bgCol);
 	void repeatZoom();
 
-	void applyPlugin(DkPlugin* plugin, const QString& key);
+	void applyPlugin(DkPluginContainer* plugin, const QString& key);
 
 	// copy & paste
 	void copyPixelColorValue();
